add_subdirectory(api-example)
add_subdirectory(barnes-hut-dynamic)
add_subdirectory(collision)
add_subdirectory(configuration)
add_subdirectory(defrag-bench)
add_subdirectory(game-of-life)
add_subdirectory(generation)
add_subdirectory(linux-scalability)
add_subdirectory(nbody)
add_subdirectory(structure)
add_subdirectory(sugarscape)
add_subdirectory(traffic)
add_subdirectory(wa-tor)
